Fixed width on mobile, some padding still needs to be fixed for other pages for mobile.

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -47,7 +47,6 @@
 
 .category {
     display: inline-block;
-    margin: 25px 50px;
 }
 
 .category a {
